<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shahalam.projectbusschedule.Faculty">

    <TextView
        android:text="HSTU has 9 Faculty "
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/faculty_postgraduate_studies"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />
            <Button
                android:text="@string/faculty_agriculture"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />

            <Button
                android:text="@string/faculty_cse"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />
            <Button
                android:text="@string/faculty_business_studies"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />
            <Button
                android:text="@string/faculty_fisheries"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />
            <Button
                android:text="@string/faculty_Veterinary"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />

            <Button
                android:text="@string/faculty_engineering"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />
            <Button
                android:text="@string/faculty_science"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />
            <Button
                android:text="@string/faculty_social_science"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="14sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
